# spi-scan

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml  release.yml
spi_scan/: __init__.py  cli.py  patterns.py  scanner.py
tests/: test_scan.py
