[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spi-scan"
version = "1.0.0"
description = "Sensitive Personal Information scanner for repos, git history, and GitHub metadata"
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
authors = [{name = "Abhishek Choudhary"}]
keywords = ["security","PII","secrets","scanner","git","privacy","SPI"]

[project.urls]
Homepage = "https://github.com/project-ilm/spi-scan"
Repository = "https://github.com/project-ilm/spi-scan"

[project.scripts]
spi-scan = "spi_scan.cli:main"

[tool.setuptools]
packages = ["spi_scan"]
